# rust-ssfw

./: .gitignore  Cargo.toml
assets/: frontend.css
src/: main.rs  utils.rs
src/elastic/: discord_experiment.rs  error.rs  index_definition.rs  index_definition_loader.rs  index_facade.rs  index_repository.rs  mod.rs  product_index.rs
src/postgres/: mod.rs  postgres_connect.rs
src/product/: mod.rs  product.rs  product_repository.rs
src/resources/definition/product/: 1.json
templates/: base.askama.html  hello.askama.html  layout.askama.html  layoutWithoutPanel.askama.html
