[package]
name = "shopsys_sqlx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1.35.1", features = ["full"] }
postgres = "0.19.7"
elasticsearch = "7.17.7-alpha.1"
serde = "1.0.195"
serde_json = "1.0.111"
dotenvy = "0.15.7"
indicatif = "0.17.8"
time = "0.3.34"
askama = "0.11"
axum = "0.7.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }